Fix text alignments

--- a/css/base.css
+++ b/css/base.css
@@ -2,7 +2,6 @@ body {
 	background: #19191A;
 	color: #d7d7d7;
 	font-size: 1.2em;
-	letter-spacing: .02em;
 }
 
 h1.title {
@@ -59,6 +58,7 @@ nav {
 	min-height: 100vh;
 	background-color: transparent;
 	color: #d7d7d7;
+	text-align: justify;
 }
 
 .title {
@@ -80,6 +80,14 @@ nav {
   background: transparent;
 	box-shadow: none;
 	border: 1px solid #111;
+}
+
+.content {
+	text-align: justify;
+}
+
+.card-content > .content > p {
+	font-size: .8em;
 }
 
 a {
